# voties

./: Cargo.toml
.github/workflows/: deploy.workflow.yaml  dev.workflow.yaml  main.html
assets/config/: foods.food_collection.toml
assets/sprites/buildings/: house.ase  mint.ase  money_hole.ase  reproductive.ase  voting_center.ase
assets/sprites/foods/: farm.ase
assets/sprites/grave/: grave.ase
assets/sprites/people/: person.ase
src/: age.rs  assets.rs  brain.rs  building.rs  collision.rs  death.rs  energy.rs  farm.rs  goals.rs  grave.rs  hunger.rs  info.rs  input.rs  main.rs  mint.rs  money.rs  money_hole.rs  movement.rs  name.rs  people.rs  player.rs  reproduction.rs  rng.rs  sets.rs  shelter.rs  sim_setup.rs  sim_time.rs  stats.rs  text.rs  upkeep.rs  utils.rs  world_stats.rs
src/buildings/: building.rs  farm.rs  house.rs  mint.rs  mod.rs  money_hole.rs  voting_center.rs
src/elections/: anti_plurality.rs  approval.rs  election.rs  first_pass_the_post.rs  good_ok_bad.rs  mod.rs  preferential.rs  star.rs  usual_judgment.rs  voter.rs  voting_center.rs  voting_methods.rs
src/goals/: eating.rs  find_housing.rs  mod.rs  reproducing.rs  vote.rs  wander.rs
src/ui/: button.rs  camera.rs  control_buttons.rs  election.rs  election_result.rs  election_status.rs  mod.rs  money.rs  resources.rs
